[tool.poetry]
name = "word-miner"
version = "0.1.0"
description = ""
authors = ["Aleksandr Kovalev <aleksandr@kovalev.engineer>"]
readme = "README.md"
packages = [{include = "word_miner"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
words-for-typing = "word_miner:main"
